# munki-s3-sync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: auto-promote.yaml  build-and-sync.yaml  repo-cleanup.yaml  run-autopkg.yaml
autopkg_overrides/: AdobeReader.munki.recipe  GoogleChrome.munki.recipe
examples/: example-pkgsinfo.plist
githooks/: post-merge  pre-auto-gc  pre-push
munki_repo/manifests/: site_default
munki_repo/pkgsinfo/apps/: GoogleChrome-147.0.7727.56.plist
munki_repo/pkgsinfo/apps/Adobe/: AdobeReader-26.001.21431.plist
munki_repo/pkgsinfo/apps/firefox/: Firefox_en-GB-149.0.2.plist
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
